tests/valid/CoCoIncorrectReturnStatement.nestml
/**
 *
 *  CoCoIncorrectReturnStatement.nestml
 *
 *  This file is part of NEST.
 *
 *  Copyright (C) 2004 The NEST Initiative
 *
 *  NEST is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  NEST is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with NEST.  If not, see <http://www.gnu.org/licenses/>.
 *
 *
 * This model is used to test if broken CoCos are identified correctly. Here, if user defined functions without
 * a proper return statement and wrong type are detected.
 * Positive case.
*/

neuron CoCoIncorrectReturnStatement:
    function foo() mV:# correct return type is given
        test mV = 10mV

        if test == 10mV:
            return test
        else:
            return 20mV
        end
        return 5mV
    end

    function noReturn():# correct return type is given
        return
    end

    function bar() mV:# correct return type is given
        return 5mV
    end

    function foobar() mV:# correct return type is given
        test mV = 10mV
        test = test*2
        return test
    end
end
